assets/css/roboto.css
/* ... */
	#landing-right {
		position: absolute;
		width: 30%;
		top: 40%;
		right: 15%;
		text-align: right;
	}

		#landing-right a:hover {
			color: #DFF2FF;
		}

		#landing-right h3 {
			width: 100%;
			padding-bottom: 0.25em;
			font-size: 2em;
			font-weight: 100;
			text-align: right;
			color: #fff;
		}

/* /adventure BASIC */

	#adventure body {
		-ms-overflow-style: scrollbar;
	}

	#adventure body {
		background: #242943;
	}

		#adventure body.is-loading *, body.is-loading *:before, body.is-loading *:after {
			-moz-animation: none !important;
			-webkit-animation: none !important;
			-ms-animation: none !important;
			animation: none !important;
			-moz-transition: none !important;
			-webkit-transition: none !important;
			-ms-transition: none !important;
			transition: none !important;
		}

/* /adventure TYPE */

	#adventure body, input, select, textarea {
		color: #ffffff;
		font-family: "Roboto", Helvetica, sans-serif;
		font-size: 17pt;
		font-weight: 300;
		letter-spacing: 0.025em;
		line-height: 1.65;
	}

		@media screen and (max-width: 1680px) {

			body, input, select, textarea {
				font-size: 14pt;
			}

		}

		@media screen and (max-width: 1280px) {

			body, input, select, textarea {
				font-size: 12pt;
			}

		}

		@media screen and (max-width: 360px) {

			body, input, select, textarea {
				font-size: 11pt;
			}

		}

	#adventure a {
		-moz-transition: color 0.2s ease, border-bottom-color 0.2s ease;
		-webkit-transition: color 0.2s ease, border-bottom-color 0.2s ease;
		-ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
		transition: color 0.2s ease, border-bottom-color 0.2s ease;
		color: inherit;
		text-decoration: none;
	}

		#adventure a:hover {
			color: #9bf1ff !important;
		}

		#adventure a:active {
			color: #53e3fb !important;
		}

	#adventure strong, b {
		color: #ffffff;
		font-weight: 600;
	}

	#adventure em, i {
		font-style: italic;
	}

	#adventure p {
		margin: 0 0 2em 0;
	}

	#adventure h1, h2, h3, h4, h5, h6 {
		color: #ffffff;
		font-weight: 700;
		line-height: 1.65;
		margin: 0 0 1em 0;
	}

		#adventure h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
			color: inherit;
		}

	#adventure h1 {
		font-size: 2.05em;
	}

	#adventure h2 {
		font-size: 1.75em;
		letter-spacing: .02em;
	}

	#adventure h3 {
		font-size: 1.35em;
	}

	#adventure h4 {
		font-size: 1.1em;
	}

	#adventure h5 {
		font-size: 0.9em;
	}

	#adventure h6 {
		font-size: 0.7em;
	}

	#adventure .override-special a {
		-moz-appearance: none;
		-webkit-appearance: none;
		-ms-appearance: none;
		appearance: none;
		-moz-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
		-webkit-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
		-ms-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
		transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
		color: #242943 !important;
	}

	#adventure .override-dark a:hover {
		color: #242943;
	}

	@media screen and (max-width: 736px) {

		h1 {
			font-size: 2em;
		}

		h2 {
			font-size: 1.5em;
		}

		h3 {
			font-size: 1.25em;
		}

	}

	#adventure blockquote {
		border-left: solid 4px rgba(212, 212, 255, 0.1);
		font-style: italic;
		margin: 0 0 2em 0;
		padding: 0.5em 0 0.5em 2em;
	}

	#adventure hr {
		border: 0;
		border-bottom: solid 1px rgba(212, 212, 255, 0.1);
		margin: 2em 0;
	}

		#adventure hr.major {
			margin: 3em 0;
		}

/* /adventure SECTION AND ARTICLE */

	#adventure section.special, article.special {
		text-align: center;
	}

	#adventure header.major {
		width: -moz-max-content;
		width: -webkit-max-content;
		width: -ms-max-content;
		width: max-content;
		margin-bottom: 2em;
	}

		#adventure header.major > :first-child {
			margin-bottom: 0;
			width: calc(100% + 0.5em);
		}

			#adventure header.major > :first-child:after {
				content: '';
				background-color: #ffffff;
				display: block;
				height: 2px;
				margin: 0.325em 0 0.5em 0;
				width: 100%;
			}

		#adventure header.major > p {
			font-size: 0.7em;
			font-weight: 600;
			letter-spacing: 0.25em;
			margin-bottom: 0;
			text-transform: uppercase;
		}

		#adventure body.is-ie header.major > :first-child:after {
			max-width: 9em;
		}

		#adventure body.is-ie header.major > h1:after {
			max-width: 100% !important;
		}

	@media screen and (max-width: 736px) {

		header.major > p br {
			display: none;
		}

	}

/* /adventure ICON */

	#adventure .icon {
		text-decoration: none;
		border-bottom: none;
		position: relative;
	}

		#adventure .icon:before {
			-moz-osx-font-smoothing: grayscale;
			-webkit-font-smoothing: antialiased;
			font-family: FontAwesome;
			font-style: normal;
			font-weight: normal;
			text-transform: none !important;
		}

		#adventure .icon > .label {
			display: none;
		}

		#adventure .icon.alt:before {
			background-color: #ffffff;
			border-radius: 100%;
			color: #242943;
			display: inline-block;
			height: 2em;
			line-height: 2em;
			text-align: center;
			width: 2em;
		}

	#adventure a.icon.alt:before {
		-moz-transition: background-color 0.2s ease-in-out;
		-webkit-transition: background-color 0.2s ease-in-out;
		-ms-transition: background-color 0.2s ease-in-out;
		transition: background-color 0.2s ease-in-out;
	}

	#adventure a.icon.alt:hover:before {
		background-color: #6fc3df;
	}

	#adventure a.icon.alt:active:before {
		background-color: #37a6cb;
	}

/* /adventure IMAGE */

	#adventure .image {
		border: 0;
		display: inline-block;
		position: relative;
	}

		#adventure .image img {
			display: block;
		}

		#adventure .image.left, .image.right {
			max-width: 30%;
		}

			#adventure .image.left img, .image.right img {
				width: 100%;
			}

		#adventure .image.left {
			float: left;
			margin: 0 1.5em 1.25em 0;
			top: 0.25em;
		}

		#adventure .image.right {
			float: right;
			margin: 0 0 1.25em 1.5em;
			top: 0.25em;
		}
/* ... */

